# libngraphs

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  demo.cpp  main.c
src/: CMakeLists.txt  demo.cpp  main.cpp
src/include/: ngraphs.h
